--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -297,7 +297,7 @@
         top: 0;
         padding: 0 15%;
         background-color: rgb(0,0,0);
-        background-color: rgba(0,0,0, 0.95);
+        background-color: rgba(0,0,0, 0.97);
         overflow-x: hidden;
         transition: 0.5s;
         text-align: center;
@@ -330,7 +330,7 @@
     /* Position the content inside the overlay */
     .overlay-content {
         position: relative;
-        top: 30%;
+        top: 20%;
         width: 100%;
         text-align: center;
         margin-top: 30px;
@@ -476,6 +476,9 @@
                   margin-bottom: 0px;
                   width: 100%!important;
               }
+              .register {
+                    margin-bottom: 20px;
+                }
 }
 
 /* For tablets */
