--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -35,8 +35,10 @@
 				</div>
 			</div>
 		</div>
-		<button class="btn btn-dark">Atnaujinti</button>
-		<button class="btn btn-dark">Pakeisti slaptažodį</button>
+		<div class="col-md-12">
+			<button class="btn btn-dark">Atnaujinti</button>
+			<button class="btn btn-dark">Pakeisti slaptažodį</button>
+		</div>
 	</div>
 	<div class="row spots">
 		<div class="col-md-offset-1 col-md-10 padding-0">
