--- a/src/app/spotters/spotters.component.css
+++ b/src/app/spotters/spotters.component.css
@@ -80,13 +80,11 @@ h2 {
 		    text-align: center;
 		    -webkit-background-size: cover;
 		    background-size: cover;
-				margin-top: 20px;
 		}
 				#spotter h1 {
 				    display: table;
-				    margin: 0 auto;
+				    margin: 25px auto;
 				    position: relative;
-				    margin-bottom: 50px;
 				    color: #fff;
 				}
 				#spotter p {
@@ -111,9 +109,6 @@ h2 {
 				    font-weight: 700;
 				    margin-top: 70px;
 				}
-		.benefits {
-				padding: 60px 0;
-		}
 		.benefits h2 {
 				margin: 0;
 		}
