--- a/src/app/spots/spots.component.html
+++ b/src/app/spots/spots.component.html
@@ -169,7 +169,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="" (click)="gotoSpotters()" routerLinkActive="active" class="btn btn-dark">Find out the advantages</a>
+			<a (click)="gotoSpotters()" routerLinkActive="active" class="btn btn-dark">Find out the advantages</a>
 		</div>
 	</div>
 </section>
