--- a/src/app/spots/spots.component.html
+++ b/src/app/spots/spots.component.html
@@ -143,33 +143,29 @@
 			</div>
 		</div>
 	</div>
-</div>
 
-<section class="spotter">
-	<div class="container">
-		<div class="row">
-			<h1>Spotter</h1>
-			<h3>Haven't found what you expected?</h3>
-			<p>Add spots yourself to help others find the best workout locations</p>
-			<div class="container dotted">
-				<div class="row">
-					<div class="col-md-3 col-xs-3">
-						<img src="/sportenjoy/assets/images/signup-icon.png" />
-						<span>Sign up</span>
-					</div>
-					<img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
-					<div class="col-md-3 col-xs-3">
-						<img src="/sportenjoy/assets/images/find-icon.png" />
-						<span>Find a spot</span>
-					</div>
-					<img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
-					<div class="col-md-3 col-xs-3">
-						<img src="/sportenjoy/assets/images/spot-icon.png" />
-						<span>Add the spot</span>
-					</div>
+	<div class="row spotter">
+		<h1>Narystė</h1>
+		<h3>Neradai ko ieškojai?</h3>
+		<p>Pridėdamas vietas pats padėsi kitiems rasti geriausias sportui vietas</p>
+		<div class="container dotted">
+			<div class="row">
+				<div class="col-md-3 col-xs-3">
+					<img src="/sportenjoy/assets/images/signup-icon.png" />
+					<span>Registruokis</span>
+				</div>
+				<img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
+				<div class="col-md-3 col-xs-3">
+					<img src="/sportenjoy/assets/images/find-icon.png" />
+					<span>Atrask</span>
+				</div>
+				<img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
+				<div class="col-md-3 col-xs-3">
+					<img src="/sportenjoy/assets/images/spot-icon.png" />
+					<span>Pasidalink</span>
 				</div>
 			</div>
-			<a (click)="gotoSpotters()" routerLinkActive="active" class="btn btn-dark">Find out the advantages</a>
 		</div>
+		<a (click)="gotoSpotters()" routerLinkActive="active" class="btn btn-dark">Narystės privalumai</a>
 	</div>
-</section>
+</div>
