--- a/src/app/spots/form.html
+++ b/src/app/spots/form.html
@@ -24,11 +24,11 @@
 					<h4>Vietovė</h4>
 					<div class="row">
 						<div class="form-group col-md-6 col-xs-6">
-							<input type="number" step="0.000001" class="form-control" placeholder="Latitude" required
+							<input type="number" step="0.000001" class="form-control" placeholder="Platuma" required
 								[(ngModel)]="spot.latitude" name="latitude">
 						</div>
 						<div class="form-group col-md-6 col-xs-6">
-							<input type="number" step="0.000001" class="form-control" placeholder="Longitude" required
+							<input type="number" step="0.000001" class="form-control" placeholder="Ilguma" required
 								[(ngModel)]="spot.longitude" name="longitude">
 						</div>
 					</div>
