--- a/src/app/spotters/spotters.component.html
+++ b/src/app/spotters/spotters.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row hidden-xs">
-		<h2>Spotters</h2>
+		<h2>Aktyviausi nariai</h2>
 	</div>
 	<div class="row spotters">
 		<div *ngFor='let spotter of spotters'  class="col-md-3 col-sm-6 spotter">
@@ -25,45 +25,45 @@
 		</div>
 	</div>
 	<div class="row" id="spotter">
-		<h1>Join</h1>
-		<h3>Make spots yourself. It's easy.</h3>
-		<p>Get on active sport places and add spots to help others to find the best workout locations</p>
+		<h1>Prisijunk</h1>
+		<h3>Pasidalink vietomis ir tu. Tai paprasta!</h3>
+		<p>Pažymėk savo mėgstamiausią sporto aikštelę taip padėdamas ją atrasti kitiems.</p>
 		<div class="container dotted">
 			<div class="row">
 				<div class="col-md-3 col-xs-3">
 					<img src="/sportenjoy/assets/images/signup-icon.png" />
-					<span>Sign up</span>
+					<span>Registruokis</span>
 				</div>
 				<img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
 				<div class="col-md-3 col-xs-3">
 					<img src="/sportenjoy/assets/images/find-icon.png" />
-					<span>Find a spot</span>
+					<span>Atrask</span>
 				</div>
 				<img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
 				<div class="col-md-3 col-xs-3">
 					<img src="/sportenjoy/assets/images/spot-icon.png" />
-					<span>Add the spot</span>
+					<span>Pasidalink</span>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="row benefits">
-	  <h2>Benefits</h2>
+	  <h2>Narystės privalumai</h2>
 	  <div class="list-group benefits-list">
 	    <a class="list-group-item">
 				<span class="glyphicon glyphicon-link addon"></span>
-	      <h4 class="list-group-item-heading">Link spots with your account</h4>
-	      <p class="list-group-item-text hidden-xs">This way everyone will be able to see that you discovered the place!</p>
+	      <h4 class="list-group-item-heading">Susiek vietą su savo paskyra</h4>
+	      <p class="list-group-item-text hidden-xs">Tokiu būdų visi galės pamatyti, jog tu pasidalinai šia vieta</p>
 	    </a>
 	    <a class="list-group-item">
 				<span class="glyphicon glyphicon-heart addon"></span>
-	      <h4 class="list-group-item-heading">Save your favorite spots</h4>
-	      <p class="list-group-item-text hidden-xs">It's a great way to remember all the places you exercise at</p>
+	      <h4 class="list-group-item-heading">Išsaugok savo mėgstamiausias vietas</h4>
+	      <p class="list-group-item-text hidden-xs">Puikus būdas prisiminti geriausias sporto vietas rajone ar mieste.</p>
 	    </a>
 	    <a class="list-group-item">
 				<span class="glyphicon glyphicon-thumbs-up addon"></span>
-	      <h4 class="list-group-item-heading">Be the best spotter</h4>
-	      <p class="list-group-item-text hidden-xs">Spot as many places you can to be the best spotter</p>
+	      <h4 class="list-group-item-heading">Būk geriausias</h4>
+	      <p class="list-group-item-text hidden-xs">Žymėk vietas ir atsidurk tarp geriausių narių</p>
 	    </a>
 	  </div>
 	</div>
