small design updates

--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -14,7 +14,7 @@
 							<th>Kategorija</th>
 							<th class="hidden-xs">Vieta</th>
 							<th class="hidden-xs">Sukurta</th>
-							<th>Spotter</th>
+							<th>Narys</th>
 						</tr>
 					</thead>
 					<tbody>
