--- a/src/app/spots/spots-top/spots-top.component.html
+++ b/src/app/spots/spots-top/spots-top.component.html
@@ -25,28 +25,5 @@
 			</div>
 		</div>
 	</div>
-	<div class="row spotter">
-		<h1>Narystė</h1>
-		<h3>Tapk dalimi sporto bendruomenės. Prisjunk prie mūsų!</h3>
-		<p>Pažymėk savo mėgstamiausią sporto aikštelę taip padėdamas ją atrasti kitiems.</p>
-		<div class="container dotted">
-			<div class="row">
-				<div class="col-md-3 col-xs-3">
-					<img src="/sportenjoy/assets/images/signup-icon.png" />
-					<span>Registruokis</span>
-				</div>
-				<img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
-				<div class="col-md-3 col-xs-3">
-					<img src="/sportenjoy/assets/images/find-icon.png" />
-					<span>Atrask</span>
-				</div>
-				<img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
-				<div class="col-md-3 col-xs-3">
-					<img src="/sportenjoy/assets/images/spot-icon.png" />
-					<span>Pasidalink</span>
-				</div>
-			</div>
-		</div>
-		<a [routerLink]="['/spotters']" routerLinkActive="active" class="btn btn-dark">Narystės privalumai</a>
-	</div>
+	<spotters-join></spotters-join>
 </div>
