Added translations. Added English translations

--- a/src/app/spots/form.css
+++ b/src/app/spots/form.css
@@ -39,7 +39,7 @@ form {
   visibility: hidden;
 }
 .file-input::before {
-  content: 'Pasirinkite failą';
+  content: "Choose file";
   margin-right: 0;
   margin-bottom: 20px;
   display: inline-block;
