--- a/src/app/spots/spots.component.html
+++ b/src/app/spots/spots.component.html
@@ -1,20 +1,22 @@
 <div class="container-fluid">
 	<div class="row">
-		<h2 *ngIf="particularSpots" class="hidden-xs">Paieškos rezultatai - {{ particularSpots.length }}</h2>
+		<!-- Show 'Search results' only if has query parameters -->
+		<!-- Show 'Nearby spots' otherwise -->
+		<h2 *ngIf="particularSpots" class="hidden-xs">{{ 'TITLES.SEARCH_RESULTS' | translate }} - {{ particularSpots.length }}</h2>
 	</div>
 	<div class="row spots">
 		<div class="spots-dropdown hidden-xs">
 			<a (click)="toggleSearchProperties()" class="btn btn-dark" type="button">
-				<span class="recap">Paieškos parinktys</span>
+				<span class="recap">{{ 'SPOTS.SEARCH_PARAMETERS' | translate }}</span>
 				<span [class.rotate]="rotatedSearchPropertiesArrow" class="glyphicon glyphicon-menu-down"></span>
 			</a>
 			<div class="dropdown-content" [style.height.px]="showSearchProperties">
 				<div class="container-fluid">
 					<div class="col-sm-8">
-						<h4>Filtravimas</h4>
+						<h4>{{ 'SPOTS.FILTERING' | translate }}</h4>
 						<div class="filter-by-text">
-							<label>Filtras</label>
-							<input type="text" placeholder="Įveskite filtravimo raktažodį" [(ngModel)]='listFilter'>
+							<label>{{ 'SPOTS.FILTER' | translate }}</label>
+							<input type="text" placeholder="{{ 'SPOTS.FILTER_PLACEHOLDER' | translate }}" [(ngModel)]='listFilter'>
 						</div>
 						<!--<div class="col-md-6">
 							<ul class="list-group">
@@ -48,22 +50,22 @@
 						</div>-->
 					</div>
 					<div class="col-sm-4">
-						<h4>Rūšiavimas</h4>
+						<h4>{{ 'SPOTS.SORTING' | translate }}</h4>
 						<ul class="list-group">
 							<li (click)="sortSpotsByRating()"
 										class="list-group-item"
 										[class.active]="selectedSorting==='rating'">
-										<a>Reitingas</a>
+										<a>{{ 'SPOTS.RATING' | translate }}</a>
 							</li>
 							<li (click)="sortSpotsByAlphabet()"
 										class="list-group-item"
 										[class.active]="selectedSorting==='alphabet'">
-										<a>Pagal abėcėlę</a>
+										<a>{{ 'SPOTS.ALPHABETICALLY' | translate }}</a>
 							</li>
 							<li (click)="sortSpotsByBeenHere()"
 										class="list-group-item"
 										[class.active]="selectedSorting==='beenHere'">
-										<a>Lankomumas</a>
+										<a>{{ 'SPOTS.POPULARITY' | translate }}</a>
 							</li>
 						</ul>
 					</div>
